--- a/secondpage.html
+++ b/secondpage.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <style type="text/css">
         body{
-            background-color: darkgray;}
+            background-color:bisque;}
         h1{
             color: black;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
